<resources>
    <string name="app_name">Pokemon API Display</string>
    <string name="decimetres">Decimetres</string>
    <string name="hectograms">Hectograms</string>
    <string name="height">Height</string>
    <string name="height_full_string">%1$s Decimetres</string>
    <string name="height_placeholder">20 Decimetres</string>
    <string name="id">ID</string>
    <string name="id_full_string">#%1$s</string>
    <string name="id_placeholder">123</string>
    <string name="name">Name</string>
    <string name="name_placeholder">Pokemon Name</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="search_placeholder">Search by ID or name</string>
    <string name="type_one_placeholder">Grass</string>
    <string name="type_two_placeholder">Poison</string>
    <string name="weight">Weight</string>
    <string name="weight_full_string">%1$s Hectograms</string>
    <string name="weight_placeholder">100 Hectograms</string>


    <string name="not_found">Pokemon not found, please try another name or ID</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>